<resources>
    <string name="app_name">Kolab Notes</string>
    <string name="sticky_note_name">Kolab Sticky-Note</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_selection">No selection</string>
    <string name="classification">Classification</string>
    <string name="creationDate">Created</string>
    <string name="modificationDate">Last modified</string>
    <string name="tags">Tags:</string>
    <string name="notags">No Tags</string>
    <string name="radio_public">Public</string>
    <string name="radio_confidential">Confidential</string>
    <string name="radio_private">Private</string>
    <string name="activity_detail_title">DetailActivity</string>
    <string name="drawer_item_tags">Tags</string>
    <string name="drawer_item_notebooks">Notebooks</string>
    <string name="drawer_item_allnotes">Notes from selected account</string>
    <string name="widget_allnotes">All from account</string>
    <string name="drawer_item_allaccount_notes">Notes from all accounts</string>
    <string name="drawer_account_local">Local Account</string>
    <string name="dialog_nointernet">No internet connection!</string>
    <string name="dialog_uploading">Progress Sample&#8230;</string>
    <string name="dialog_processinganduploading">Showing a sample progress. Please be patient! (This does nothing. Just waiting 100ms / application)</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="label">Kolab Notes</string>
    <string name="signup_title">Create new account</string>
    <string name="signup_ok">Created new account</string>
    <string name="login_label">Log in</string>
    <string name="summary_text">Large Text</string>
    <string name="text_summary">Summary</string>
    <string name="description_text">Medium Text</string>
    <string name="description_hint">Description</string>
    <string name="text_description">Medium Text</string>
    <string name="error_connection">An error has occurred while attempting to connect to server</string>
    <string name="dialog_input_text_hint">Summary</string>
    <string name="dialog_input_text_search_hint">Note summary</string>
    <string name="dialog_input_text_notebook">New Notebook</string>
    <string name="dialog_input_text_search">Search Note</string>
    <string name="dialog_delete_note">Delete Note</string>
    <string name="dialog_delete_notes">Delete Notes</string>
    <string name="dialog_cancel_warning">Cancel Warning</string>
    <string name="dialog_delete_nb_warning">Delete notebook</string>
    <string name="dialog_question_delete_nb">The notebook and all its notes will be deleted, are you sure?</string>
    <string name="dialog_input_text_tag">New Tag</string>
    <string name="dialog_change_classification">Edit Classification</string>
    <string name="dialog_change_tags">Edit Tags</string>
    <string name="no_nb_selected">No notebook selected</string>
    <string name="local_account_change">Local account cannot be changed</string>
    <string name="add">add</string>
    <string name="title_edit_tag">Edit Tags</string>
    <string name="dialog_question_delete">Do you really want to delete this note?</string>
    <string name="dialog_question_delete_notes">Do you really want to delete selected notes?</string>
    <string name="dialog_question_cancel">All changes will be discarded, are you sure?</string>
    <string name="account_name">Account name</string>
    <string name="imap_root_folder">IMAP root folder (default is Notes)</string>
    <string name="imap_server_url">imap.myserver.com</string>
    <string name="port_number">Port number (default is 993)</string>
    <string name="error_generic">An error occurred</string>
    <string name="error_duplicate_account">Could not create account (account with this name already existing?)</string>
    <string name="enable_ssl">SSL enabled</string>
    <string name="title_add_account">Add Account</string>
    <string name="title_update_account">Change Account</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_colorpicker">Choose Color</string>
    <string name="action_sign_in">Sign In</string>
    <string name="button_add">button_add</string>
    <string name="error_field_required">Required entry missing</string>
    <string name="error_field_to_low">This value must be between 1 and 90</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_invalid_password">Password is invalid</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_kolab_login">Log in</string>
    <string name="title_change_classification">Edit Classification</string>
    <string name="title_create_notebook">New Notebook</string>
    <string name="title_create_tag">New Tag</string>
    <string name="title_delete">Delete</string>
    <string name="title_dialog_search">Search</string>
    <string name="title_ok">OK</string>
    <string name="title_share">Share</string>
    <string name="kolab_enabled">Kolab extensions</string>
    <string name="sync_intervall">Sync interval (default 24)</string>
    <string name="note_not_found">Note not found!</string>
    <string name="create_or_select_text">Select or create a note</string>
    <string name="select_or_create_hint">select or create note icon</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_saved">Note saved</string>
    <string name="sync_failed">Synchronisation failed</string>
    <string name="title_delete_notebook">Delete notebook</string>
    <string name="send_to">Share note with...</string>
    <string name="empty_note">Note is empty</string>
    <string name="sort_with_heading">Sort with:</string>
    <string name="radio_desc">Descending</string>
    <string name="radio_asc">Ascending</string>
    <string name="title_dialog_sorting">Change sorting</string>
    <string name="color">Color</string>
    <string name="account_choose_title">Choose an account</string>
    <string name="select_button">Select</string>
    <string name="extended_options">More options</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="title_metainformation">Metainformation</string>
    <string name="productID">Product ID</string>
    <string name="uid">UID</string>
    <string name="title_characteristics">Characteristics</string>
    <string name="title_choose_tag_color">Choose tag color</string>
    <string name="no_tag_selected">No tag selected</string>
    <string name="remove">Remove</string>
    <string name="shared_folders">Shared notebooks</string>
    <string name="changed_content_shared_folder">Change in shared notebook</string>
    <string name="note_changed">Note got changed</string>
    <string name="in_notebook">in notebook</string>
    <string name="note_created">New note</string>
    <string name="dialog_input_link">Attach link</string>
    <string name="no_folder_permission">No permission for folder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="snackbar_delete_message">Deleted</string>
    <string name="snackbar_undo_delete">Undo</string>
    <string name="print">Print</string>
    <string name="move_note">Move</string>
    <string name="pref_header_general">General</string>
    <string-array name="pref_direction_titles">
        <item>@string/radio_asc</item>
        <item>@string/radio_desc</item>
    </string-array>
    <string-array name="pref_direction_values">
        <item>ASC</item>
        <item>DESC</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_conflict">Sync conflicts handling</string>
    <string-array name="pref_sync_conflict_titles">
        <item>Last modified note</item>
        <item>Server note</item>
        <item>Local note</item>
        
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_characteristics">Show tags</string>
    <string name="pref_metainformation">Show metainformations</string>
    <string name="pref_desc_metainformation">Show creation date and last modification date</string>
    <string name="pref_column">Column</string>
    <string name="pref_direction">Direction</string>
    <string name="pref_show_sync_notifications">Show sync notifications</string>
    <string name="pref_show_sync_notifications_summary">Show notifications if notes in shared folders are changed</string>
    <string name="no_write_permissions">No write permissions in selected notebook</string>
    <string name="no_change_permissions">No edit permissions in selected notebook</string>
    <string name="no_create_permissions">No creation permission in selected notebook</string>
    <string name="pref_sorting_category">Sorting</string>
    <string name="title_activity_tag_list">Tags</string>
    <string name="tag_creationDate">Created</string>
    <string name="tag_modificationDate">Last modified</string>
    <string name="dialog_delete_tags">Delete Tags</string>
    <string name="dialog_question_delete_tags">Do you really want to delete selected tags?\n\nWarning: deleting a tag will maybe affect other groupware objects.</string>
    <string name="dialog_change_tag_warning">Warning: changing a tag will maybe affect other groupware objects</string>
    <string name="dialog_input_update_tag_text">Change tagname</string>
    <string name="no_tags">No tags</string>
    <string name="no_notes">No notes</string>
    <string name="title_activity_export">Export notebook</string>
    <string name="title_activity_import">Import notebook</string>
    <string name="exporting">Exporting</string>
    <string name="export_canceled">Notebook export canceled</string>
    <string name="exported">Notebook exported</string>
    <string name="importing">Importing</string>
    <string name="import_canceled">Notebook import canceled</string>
    <string name="imported">Notebook imported</string>
    <string name="pref_richeditor">Enable Richtexteditor</string>
    <string name="pref_desc_richeditor">Enables the Richtexteditor for formatted notes</string>
    <string name="draweditor_title">Drawing</string>
    <string name="draweditor_menu_undo">Undo</string>
    <string name="draweditor_menu_redo">Redo</string>
    <string name="draweditor_menu_clear">Clear canvas</string>
    <string name="draweditor_menu_ok">OK</string>
    <string name="draweditor_title_line_weight">Brush size</string>
    <string name="draweditor_saving_toast">Saving</string>
    <string name="attachment_add">Add attachment</string>
    <string name="attachment_none">No attachments</string>
    <string name="attachment_title">Attachments</string>
    <string name="attachments">Attachments</string>
    <string name="attachment_creation_failed">Attachment creation failed</string>
    <string name="attachment_already_exist">Attachment with given filename already exists</string>
    <string name="attachment_send_to">Share attachement with...</string>
    <string name="pref_preview">Note preview</string>
    <string name="pref_desc_preview">Show some preview text characters of note text</string>
    <string name="changeAccount">Choose Account</string>
</resources>