<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_characteristics"
        android:title="@string/pref_characteristics" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_metainformation"
        android:summary="@string/pref_desc_metainformation"
        android:title="@string/pref_metainformation" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_preview"
        android:summary="@string/pref_desc_preview"
        android:title="@string/pref_preview" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_richeditor"
        android:summary="@string/pref_desc_richeditor"
        android:title="@string/pref_richeditor" />

    <PreferenceCategory
        android:key="sorting_category"
        android:title="@string/pref_sorting_category">

        <ListPreference
            android:defaultValue="@string/text_summary"
            android:entries="@array/sorting_columns"
            android:entryValues="@array/sorting_columns_values"
            android:key="pref_column"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_column" />

        <ListPreference
            android:defaultValue="ASC"
            android:entries="@array/pref_direction_titles"
            android:entryValues="@array/pref_direction_values"
            android:key="pref_direction"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_direction" />

    </PreferenceCategory>

</PreferenceScreen>
