<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/attachments"
        android:icon="@drawable/ic_attachment_white_48dp"
        android:title="@string/attachments"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/delete_menu"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/title_delete"
        app:showAsAction="always" />

    <item
        android:id="@id/edit_tag_menu"
        android:icon="@drawable/ic_action_labels_white"
        android:title="@string/title_edit_tag"
        app:showAsAction="ifRoom" />
    <!--issue 85
        <item android:id="@id/change_classification"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_not_secure"
            android:title="@string/title_change_classification" /> -->

    <item
        android:id="@+id/colorpicker"
        android:icon="@drawable/ic_action_choose_color"
        android:title="@string/title_colorpicker"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/metainformation"
        android:icon="@drawable/ic_info_white_48dp"
        android:title="@string/title_metainformation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/title_share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/ok_menu"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/title_ok"
        app:showAsAction="always" />

    <item
        android:id="@+id/print"
        android:icon="@drawable/ic_print_white_48dp"
        android:title="@string/print"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/changeAccount"
        android:icon="@drawable/ic_assignment_ind_white_48dp"
        android:title="@string/changeAccount"
        app:showAsAction="ifRoom" />
</menu>