<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/tag_list"
        android:icon="@drawable/ic_action_labels_white"
        android:title="@string/title_activity_tag_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/create_notebook_menu"
        android:icon="@drawable/ic_action_collection_new"
        android:title="@string/title_create_notebook"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/delete_notebook_menu"
        android:icon="@drawable/ic_action_collection_remove"
        android:title="@string/title_delete_notebook"
        app:showAsAction="ifRoom" />

    <!--Add search item to the tool bar, use app:actionViewClass instead of android:actionViewClass-->
    <!--because of the error return null search info-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/title_dialog_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/export_menu"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_activity_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/import_menu"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/title_activity_import"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_menu"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom" />
</menu>