<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_navigation"
        android:checkableBehavior="none">
        <item
            android:id="@+id/all_notes"
            android:icon="@drawable/ic_action_group"
            android:title="@string/drawer_item_allaccount_notes" />
        <item
            android:id="@+id/all_notes_from_account"
            android:icon="@drawable/ic_action_person"
            android:title="@string/drawer_item_allnotes" />
        <item
            android:id="@+id/navigation_tags"
            android:enabled="false"
            android:icon="@drawable/ic_action_labels"
            android:title="@string/drawer_item_tags">
            <menu>
                <!-- will be filled at runtime -->
            </menu>
        </item>

        <item
            android:id="@+id/navigation_notebooks"
            android:enabled="false"
            android:icon="@drawable/ic_action_collection"
            android:title="@string/drawer_item_notebooks">
            <menu>
                <!-- will be filled at runtime -->
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/drawer_accounts"
        android:checkableBehavior="none"
        android:visible="false">
        <!-- will be filled at runtime -->
    </group>
</menu>