<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="org.kore.kolabnotes.android.setting.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_applications_white_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="org.kore.kolabnotes.android.setting.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="org.kore.kolabnotes.android.setting.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
