<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="@dimen/tool_bar_top_padding">

    <Spinner
        android:id="@+id/spinner_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner_notebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/sort_with_heading" />

    <Spinner
        android:id="@+id/spinner_sort_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_sort_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_asc" />

        <RadioButton
            android:id="@+id/radio_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_desc" />
    </RadioGroup>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>