<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.V21.Theme.AppCompat.Light"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/tool_bar_top_padding"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="org.kore.kolabnotes.android.security.AuthenticatorActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|top"
        android:layout_weight="0.53"
        android:fillViewport="false"
        android:theme="@style/Base.V21.Theme.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_accountType"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/accountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:enabled="true"
                    android:hint="@string/account_name"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/imap_server_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imap_server_url"
                    android:inputType="textUri"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/accountPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionNone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <SwitchMaterial
                    android:id="@+id/enable_more_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="true"
                    android:paddingTop="8dp"
                    android:paddingBottom="5dp"
                    android:text="@string/extended_options"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/imap_root_folder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imap_root_folder"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/port_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:editable="true"
                    android:ems="10"
                    android:enabled="true"
                    android:hint="@string/port_number"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sync_intervall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:editable="true"
                        android:ems="10"
                        android:enabled="true"
                        android:hint="@string/sync_intervall"
                        android:inputType="number"
                        android:numeric="integer"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />

                    <Spinner
                        android:id="@+id/spinner_intervall"
                        style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/enable_ssl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/enable_ssl"
                    android:textColor="@android:color/black" />

                <SwitchMaterial
                    android:id="@+id/enable_kolab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/kolab_enabled"
                    android:textColor="@android:color/black" />

                <SwitchMaterial
                    android:id="@+id/enable_shared_folders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="true"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/shared_folders"
                    android:textColor="@android:color/black" />


                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>



